librbd: deep_copy: don't hide parent if zero overlap for snapshot

Fixes: http://tracker.ceph.com/issues/24545
Signed-off-by: Mykola Golub <mgolub@suse.com>
(cherry picked from commit d3d730ce0f9f7f287e4b60cface66e9d9fb6882e)